Bug fixed sidebar not coming on mobile view

--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -156,10 +156,3 @@
     top: 50%;
 }
 
-
-@media screen and (max-width: 1024px) {
-    .aside{
-      left: -110px;
-    }
-    
-}
